# rust_auth

./: Cargo.toml
src/: auth.rs  error.rs  main.rs
