[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3.6"
